@@ -17,5 +17,5 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Suggests: testthat
-Imports: yaml, shiny, RCurl, git2r, rlist
+Imports: yaml, shiny, RCurl, git2r, rlist, diffobj, httr
 
