@@ -1,19 +1,0 @@
-<html>
-
-<head>
-<title>R Package phuse </title>
-</head>
-
-<body>
-<h1>Script Metadata for Sharing </h1>
-<ul>
-  <li><a href="https://drive.google.com/open?id=0B6yBXwWAdpcTa05SdXZlX1U0LUU" target="_blank">Paper</a></li>
-  <li><a href="https://drive.google.com/open?id=0B6yBXwWAdpcTNElHQTE5N0pMR00" target="_blank">Presentation</a></li>
-  <li><a href="https://www.linkedin.com/pulse/my-first-r-package-phuse-hanming-tu/" target="_blank">My first R Package - phuse</a> </li>
-</ul>
-
-<footer>
-  <a href="https://www.linkedin.com/in/hanmingtu/" target="_blank">linkedin</a>
-</footer>
-</body>
-</html>
