@@ -1,26 +1,28 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/get_yml_inputs.R
-\name{get_yml_inputs}
-\alias{get_yml_inputs}
-\title{Get Inputs from Script Metadata File}
+% Please edit documentation in R/build_inputs.R
+\name{build_inputs}
+\alias{build_inputs}
+\title{Build Inputs from Script Metadata for Phuse Web Framework}
 \usage{
-get_yml_inputs(fn = NULL)
+build_inputs(fn = NULL)
 }
 \arguments{
 \item{fn}{a file name or URL pointing to script metadata file}
 }
 \value{
-a list of input values provided for the script
+R shiny code for providing inputs to the script
 }
 \description{
-Get inputs from script metadata.
+Build R shiny code for Phuse Web Apps
 }
 \examples{
+\dontrun{
   a <- "https://github.com/phuse-org/phuse-scripts/raw/master"
   b <- "development/R/scripts"
   c <- "Draw_Dist2_R.yml"
   f1 <- paste(a,b,c, sep = '/')
-  r1 <- get_inputs(f1)
+  r1 <- build_inputs(f1)
+}
 }
 \author{
 Hanming Tu
